--- a/strings.yaml
+++ b/strings.yaml
@@ -1,9 +1,10 @@
 branding:
   name: About Library 
-  org: The New York Times
-  orgDomain: nytimes.com
+  org: People's Action
+  orgDomain: peoplesaction.org
   prettyName: About Library
   favicon: /assets/images/library.ico
+  icon: /assets/PeoplesAction-icon.png
 
 landing:
   tagline: A simple documentation site, built from content in Google Docs.
